--- a/树莓派配置私有云/笔记.md
+++ b/树莓派配置私有云/笔记.md
@@ -1,1 +1,22 @@
 
+在家里就可以搭建一个私有云，上传自己喜欢的电影或者音乐，方便与家人、好友分享。或者用在企业内部文件共享、权限管理、即时通信和文件保护 。
+  首先，我们需要了解私有云的运行条件，owncloud是基于LAMP环境才能运行的。
+  
+  LAMP：
+   L：Linux，开源操作系统，（raspbian系统）
+
+   A：Apache，网页服务器
+
+   M：Mysql(MariaDB)，数据库
+
+   P：PHP，编程语音。
+
+
+
+一、安装LAMP环境
+1.1安装Apache 网页服务器
+
+sudo apt-get update
+sudo apt-get install apache2
+
+查看Apache2是否安装成功：在浏览器输入127.0.0.1，显示it work就表示安装成功。
