--- a/树莓派配置私有云/笔记.md
+++ b/树莓派配置私有云/笔记.md
@@ -17,6 +17,16 @@
 1.1安装Apache 网页服务器
 
 sudo apt-get update
-sudo apt-get install apache2
+sudo apt-get install apache2 (安装失败换中科大源)
 
 查看Apache2是否安装成功：在浏览器输入127.0.0.1，显示it work就表示安装成功。
+![1](https://github.com/NarcissusQAQ/Cloud/blob/master/pic/1.png)
+
+1.2安装Mysql 数据库
+
+sudo apt-get install mysql-server mysql-client
+
+如果软件源是阿里云源，或者其他源出现错误的，请使用以下命令安装：
+
+sudo apt-get install mariadb-server-10.0 
+
