--- a/树莓派配置私有云/笔记.md
+++ b/树莓派配置私有云/笔记.md
@@ -12,21 +12,31 @@
    P：PHP，编程语音。
 
 
-
 一、安装LAMP环境
 1.1安装Apache 网页服务器
 
 sudo apt-get update
 sudo apt-get install apache2 (安装失败换中科大源)
-
 查看Apache2是否安装成功：在浏览器输入127.0.0.1，显示it work就表示安装成功。
 ![1](https://github.com/NarcissusQAQ/Cloud/blob/master/pic/1.png)
+
 
 1.2安装Mysql 数据库
 
 sudo apt-get install mysql-server mysql-client
-
 如果软件源是阿里云源，或者其他源出现错误的，请使用以下命令安装：
-
 sudo apt-get install mariadb-server-10.0 
+测试方法：
+sudo mysql -u root -p
+![2](https://github.com/NarcissusQAQ/Cloud/blob/master/pic/2.png)
+输入树莓派密码，显示以上界面证明安装成功。
+输入exit ，回车退出mysql。
+
+
+1.3安装PHP
+
+sudo apt-get install php7.1-mysql php7.1-curl php7.1-json php7.1-cgi libapache2-mod-php7.1 php7.1 
+sudo apt-get install php7.1-gd php7.1-intl php7.1-xml php7.1-zip php7.1-mbstring
+sudo apt-get install php-mcrypt php-imagick
+有提示就按Y继续安装就可以。
 
