--- a/树莓派配置私有云/笔记.md
+++ b/树莓派配置私有云/笔记.md
@@ -14,7 +14,6 @@
 
 一、安装LAMP环境
 1.1安装Apache 网页服务器
-
 sudo apt-get update
 sudo apt-get install apache2 (安装失败换中科大源)
 查看Apache2是否安装成功：在浏览器输入127.0.0.1，显示it work就表示安装成功。
@@ -22,7 +21,6 @@ sudo apt-get install apache2 (安装失败换中科大源)
 
 
 1.2安装Mysql 数据库
-
 sudo apt-get install mysql-server mysql-client
 如果软件源是阿里云源，或者其他源出现错误的，请使用以下命令安装：
 sudo apt-get install mariadb-server-10.0 
@@ -34,9 +32,18 @@ sudo mysql -u root -p
 
 
 1.3安装PHP
-
 sudo apt-get install php7.1-mysql php7.1-curl php7.1-json php7.1-cgi libapache2-mod-php7.1 php7.1 
 sudo apt-get install php7.1-gd php7.1-intl php7.1-xml php7.1-zip php7.1-mbstring
 sudo apt-get install php-mcrypt php-imagick
 有提示就按Y继续安装就可以。
+
+
+1.4安装phpmyadmin并设置mysql的密码
+sudo apt-get install phpmyadmin
+等待软件下载完成，出现以下界面，按空格键选择网页服务器：apache2，再按回车确认OK。
+![3](https://github.com/NarcissusQAQ/Cloud/blob/master/pic/3.png)
+选择YES，
+设置mysql的密码，与本机密码相同即可，若设置太多密码容易混乱，
+再次输入密码，按Enter键确认OK。
+
 
