--- a/树莓派配置私有云/笔记.md
+++ b/树莓派配置私有云/笔记.md
@@ -47,3 +47,18 @@ sudo apt-get install phpmyadmin
 再次输入密码，按Enter键确认OK。
 
 
+1.5测试php安装是否成功：创建一个php网页显示PHP的版本信息。
+sudo nano /var/www/html/test.php
+输入文字
+  <?php
+  phpinfo();
+  ?>
+保存并退出。
+重启Apache：
+sudo /etc/init.d/apache2 restart
+在浏览器上输入网址：
+http://localhost/test.php
+![4](https://github.com/NarcissusQAQ/Cloud/blob/master/pic/4.png)
+显示以上PHP版本信息则说明安装成功。
+
+
