--- a/树莓派配置私有云/笔记.md
+++ b/树莓派配置私有云/笔记.md
@@ -62,3 +62,50 @@ http://localhost/test.php
 显示以上PHP版本信息则说明安装成功。
 
 
+***************************************************************************
+二、安装私有云owncloud
+2.1下载安装包。
+我们现在需要在服务器上下载OwnCloud 安装包。使用下面的命令从官方网站下载安装包（目前最新的是10.2.1，如果该版本失效，可以到以下网址查看并下载最新版本：https://download.owncloud.org/community）
+cd  /home/pi/Desktop  (切换到桌面，下一步下载压缩包到桌面，此步可下载到其他地方)
+wget https://download.owncloud.org/community/owncloud-10.2.1.tar.bz2
+
+
+2.2解压安装包
+tar -xvf owncloud-10.2.1.tar.bz2
+
+
+2.3将所有解压后的文件移到 /var/www/html
+sudo mv owncloud/*  /var/www/html
+
+
+***************************************************************************
+三、配置owncloud
+3.1修改Apache的配置文件apache2.conf：
+sudo nano /etc/apache2/apache2.conf
+向下查找到AllowOverride修改：None改为All
+保存文件并退出：Ctrl+X，然后按 Y， 再按Enter 回车。
+
+
+3.2创建data文件夹，用于保存数据
+cd /var/www/html
+sudo mkdir data
+
+
+3.3修改Owncloud文件夹的文件权限：
+sudo chown -R www-data:www-data /var/www/html/
+sudo chmod 777 /var/www/html/config/
+
+
+3.4在MariaDB上创建一个数据库，保存来自OwnCloud的数据。创建数据库和数据库用户：
+sudo mysql -u root -p
+MariaDB [(none)] > create database owncloud;
+MariaDB [(none)] > GRANT ALL ON owncloud.*TO ocuser@localhost IDENTIFIED BY 'owncloud';
+MariaDB [(none)] > flush privileges;
+MariaDB [(none)] > exit
+![5](https://github.com/NarcissusQAQ/Cloud/blob/master/pic/5.png)
+
+
+3.5重启Apache服务器
+sudo /etc/init.d/apache2 restart
+
+
