--- a/树莓派配置私有云/笔记.md
+++ b/树莓派配置私有云/笔记.md
@@ -67,8 +67,8 @@ http://localhost/test.php
 2.1下载安装包。
 我们现在需要在服务器上下载OwnCloud 安装包。使用下面的命令从官方网站下载安装包（目前最新的是10.2.1，如果该版本失效，可以到以下网址查看并下载最新版本：https://download.owncloud.org/community）
 cd  /home/pi/Desktop  (切换到桌面，下一步下载压缩包到桌面，此步可下载到其他地方)
-wget https://download.owncloud.org/community/owncloud-10.2.1.tar.bz2
-
+wget https://download.owncloud.org/community/owncloud-10.2.1.tar.bz2     //适用php7.1
+wget https://download.owncloud.org/community/owncloud-10.0.9.tar.bz2    //适用php7.0
 
 2.2解压安装包
 tar -xvf owncloud-10.2.1.tar.bz2
@@ -109,3 +109,9 @@ MariaDB [(none)] > exit
 sudo /etc/init.d/apache2 restart
 
 
+四、安装完成测试服务器
+在电脑上输入树莓派的ip，即可进入owncloud页面，配置相关账号，输入地址后发现提示PHP intl 模块未安装, 然后安装了一下PHP intl模块
+sudo apt-get install php7.0-intl
+重启Apache，安装成功，终于能进入登录页面了
+![6](https://github.com/NarcissusQAQ/Cloud/blob/master/pic/6.png)
+可以进行上传下载操作，进入phpmyadmin可以查看数据库里面的信息，至此搭建完成~~
